public/stylesheets/style.css
body {
  padding: 50px;
  background-color:#222;
  color:#ddd;
}

input, select {
	color:#000;
}

#chart {
  min-width: 95%;
  height: 600px;
}

#chart a-scene { display: block; width: 100%; height: 600px }

#currentVote {
	padding: 50px;
	margin: 5% 10% 5% 10%;
}

.hidden {
	display:none;
}

.game-button {
	padding:2em;
	font-size:2em;
	line-height:0em;
}










  
  .wrapper {
	position: relative;
	min-height: 100vh;
  }
  
  [class|="confetti"] {
	position: absolute;
  }
  
  .red {
	background-color: #E94A3F;
  }
  
  .yellow {
	background-color: #FAA040;
  }
  
  .blue {
	background-color: #5FC9F5;
  }
  

